RESOLVED FIXED 244541
Some scrolling events should be ignored in overlay regions
https://bugs.webkit.org/show_bug.cgi?id=244541
Summary Some scrolling events should be ignored in overlay regions
Mike Wyrzykowski
Reported 2022-08-30 09:12:25 PDT
Some scrolling events should be ignored in overlay regions
Attachments
Mike Wyrzykowski
Comment 1 2022-08-30 09:12:49 PDT
Mike Wyrzykowski
Comment 2 2022-08-30 10:13:01 PDT
EWS
Comment 3 2022-09-05 21:25:21 PDT
Committed 254174@main (59bc81856ec0): <https://commits.webkit.org/254174@main> Reviewed commits have been landed. Closing PR #3814 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.