Some scrolling events should be ignored in overlay regions https://bugs.webkit.org/show_bug.cgi?id=244541 <rdar://98203121>

Reviewed by Tim Horton.

Ignore zoom wheel events in overlay regions.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _scrollView:asynchronouslyHandleScrollEvent:completion:]):
* Source/WebKit/Platform/spi/ios/UIKitSPI.h:

Canonical link: https://commits.webkit.org/254174@main